[gd_scene load_steps=5 format=3 uid="uid://8qvcp2v66yo5"]

[ext_resource type="Script" path="res://Scripts/Collectable.gd" id="1_o5lxt"]
[ext_resource type="AudioStream" uid="uid://wgmvfddurs57" path="res://Assets/Sounds/pickup.mp3" id="3_tvm35"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_swe4k"]
size = Vector2(36, 36)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hodh3"]
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("3_tvm35")
stream_0/weight = 1.0

[node name="Node2D" type="Area2D" node_paths=PackedStringArray("item_sprite", "item_pick_sound")]
script = ExtResource("1_o5lxt")
item_sprite = NodePath("Sprite2D")
item_pick_sound = NodePath("AudioStreamPlayer2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.05)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_swe4k")

[node name="ClearTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_hodh3")
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ClearTimer" to="." method="_on_clear_timer_timeout"]
